--- a/background.html
+++ b/background.html
@@ -14,7 +14,7 @@
 
 
     <script src="lib/jquery.min.js"></script>
-    <script src="js/background.js"></script>
+    <script src="background.js"></script>
 </body>
 
 </html>
