--- a/popup/popup.html
+++ b/popup/popup.html
@@ -37,7 +37,7 @@
           <li ng-hide="firebaseUser">
             <a href="#" ng-disabled="isDisabled" ng-init="textButton = 'Sign In With Google'" ng-click="startSignIn()">{{textButton}}</a>
           </li>
-          <li><a href="#">About</a></li>
+          <li><a href="#" id="linkOpenOptionsPage">Quản Trị</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
