--- a/options.html
+++ b/options.html
@@ -33,7 +33,7 @@
 </head>
 <body ng-app="app">
 
-  <nav ng-controller="headerCtrl" class="navbar navbar-default">
+  <nav ng-controller="header-controller" class="navbar navbar-default">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -86,13 +86,14 @@
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
 
-    <script src="app-options-page/app.js"></script>
+    <script src="app-options-page/app.module.js"></script>
+    <script src="app-options-page/app.routes.js"></script>
 
-    <script src="app-options-page/controller/mainCtrl.js"></script>
-    <script src="app-options-page/controller/ordersCtrl.js"></script>
-    <script src="app-options-page/controller/configurationCtrl.js"></script>
+    <script src="app-options-page/components/home/homeController.js"></script>
+    <script src="app-options-page/components/orders/ordersController.js"></script>
+    <script src="app-options-page/components/configuration/configurationController.js"></script>
 
-    <script src="app-options-page/service/chromeStorage.js"></script>
+    <script src="app-options-page/services/chromeStorage.js"></script>
     <script src="lib/noty/js/noty.min.js" type="text/javascript"></script>
 </body>
 </html>
