--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -1,6 +1,5 @@
 <div class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
     <div class="panel-body">
-        {{url}}
-        <button class="btn btn-success" id="print">In Don Hang </button>
+        <a href={{printLink}} target="_blank"><button class="btn btn-success" id="print">In Don Hang </button></a> 
     </div>
 </div>
