--- a/options.html
+++ b/options.html
@@ -34,6 +34,9 @@
       size: auto;
       margin: 5mm;
     }
+    #qrcode img{
+      width: 100%;
+    }
   </style>
 
 </head>
@@ -110,6 +113,7 @@
   <script src="app-options-page/components/print-ordershopee/printController.js"></script>
   <script src="app-options-page/services/chromeStorage.js"></script>
   <script src="lib/noty/js/noty.min.js" type="text/javascript"></script>
+  <script src='lib/qrcode.min.js'></script>
 </body>
 
 </html>
