--- a/options.html
+++ b/options.html
@@ -6,9 +6,11 @@
   <title>Lập Nghiệp Shop Online</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
   <link href="lib/noty/css/noty.css" rel="stylesheet">
-
-  <link rel='stylesheet prefetch' href='lib/datatable/css/dataTable.css'>
-  <link rel='stylesheet prefetch' href='lib/datatable/css/material.css'>
+  <!-- <link href="lib/uigrid/ui-grid.woff" rel="stylesheet"> -->
+  <!-- <link href="lib/uigrid/ui-grid.tff" rel="stylesheet"> -->
+  <link rel="stylesheet" href="lib/uigrid/ui-grid.min.css">
+  <!-- <link rel='stylesheet prefetch' href='lib/datatable/css/dataTable.css'>
+  <link rel='stylesheet prefetch' href='lib/datatable/css/material.css'> -->
 
   <style>
     body {
@@ -34,7 +36,8 @@
       size: auto;
       margin: 5mm;
     }
-    #qrcode img{
+
+    #qrcode img {
       width: 100%;
     }
   </style>
@@ -94,15 +97,26 @@
 
   <div ng-view></div>
 
+
   <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
 
   <script src="lib/jquery/jquery-2.1.3.min.js"></script>
   <script src="lib/angular/1.5.9/angular.min.js"></script>
-  <script src="lib/datatable/dataTable.min.js"></script>
+
+  <script src="lib/uigrid/ui-grid.core.min.js"></script>
+  <script src="lib/uigrid/ui-grid.pagination.min.js"></script>
+  <script src="lib/uigrid/ui-grid.edit.min.js"></script>
+  <script src="lib/uigrid/ui-grid.min.js"></script>
+  
+  <!-- <script src="lib/datatable/dataTable.min.js"></script> -->
+  <!-- <script src="lib/datatable/dataTable.helpers.js"></script> -->
   <script src="lib/angular/1.5.9/angular-route.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.min.js"></script>
 
+  <script src="lib/moment/moment.js"></script>
+  <script src="lib/moment/angular-moment.min.js"></script>
+  <script src='lib/moment/vi.js'></script>
 
   <script src="app-options-page/app.module.js"></script>
   <script src="app-options-page/app.routes.js"></script>
@@ -112,8 +126,9 @@
   <script src="app-options-page/components/configuration/configurationController.js"></script>
   <script src="app-options-page/components/print-ordershopee/printController.js"></script>
   <script src="app-options-page/services/chromeStorage.js"></script>
-  <script src="lib/noty/js/noty.min.js" type="text/javascript"></script>
+  <script src="lib/noty/js/noty.min.js" ></script>
   <script src='lib/qrcode.min.js'></script>
+
 </body>
 
 </html>
