--- a/options.html
+++ b/options.html
@@ -107,6 +107,13 @@
       font-size: 14px;
       display: inline-block;
     }
+
+    #ordersLoading {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 42%;
+    }
   </style>
 
 </head>
