--- a/app-content/shopee/frontend/single-product/template.html
+++ b/app-content/shopee/frontend/single-product/template.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default panel-1688-shopee" ng-controller="1688Ctrl" id="addTaskModal">
+<div class="panel panel-default panel-1688-shopee" ng-controller="shopeeCtrl" id="addTaskModal">
   <div class="panel-body">
     <h4 class="modal-title">sold {{GLOBAL_FIRST_RESPONSE[item.itemid]['sold']}} updated {{timeSubtract()}} &nbsp;</h4>
     <button class="btn btn-success" ng-click="download_images()">Tải Ảnh Về</button>
