--- a/options.html
+++ b/options.html
@@ -183,8 +183,9 @@
   <script src="lib/jquery/jquery-2.1.3.min.js"></script>
   <script src="lib/angular/1.5.9/angular.min.js"></script>
 
-  <script src="lib/qrscan/html5-qrcode.min.js"></script>
-  <script src="lib/qrscan/jsqrcode-combined.min.js"></script>
+  <!-- <script src="lib/qrscan/html5-qrcode.min.js"></script>
+  <script src="lib/qrscan/jsqrcode-combined.min.js"></script> -->
+  <script src="lib/qrscan/instascan.min.js"></script>
 
   <script src="lib/uigrid/ui-grid.core.min.js"></script>
   <script src="lib/uigrid/ui-grid.cellnav.min.js"></script>
