--- a/options.html
+++ b/options.html
@@ -6,6 +6,9 @@
   <title>Lập Nghiệp Shop Online</title>
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css">
   <link href="lib/noty/css/noty.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+  <link href="css/home.css" rel="stylesheet">
+  
   <!-- <link href="lib/uigrid/ui-grid.woff" rel="stylesheet"> -->
   <!-- <link href="lib/uigrid/ui-grid.tff" rel="stylesheet"> -->
   <link rel="stylesheet" href="lib/uigrid/ui-grid.min.css">
@@ -13,107 +16,7 @@
   <link rel='stylesheet prefetch' href='lib/datatable/css/material.css'> -->
 
   <style>
-    body {
-      font-family: 'RobotoDraft', 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
-      font-style: normal;
-      font-weight: 300;
-      font-size: 1.4rem;
-      line-height: 2rem;
-      letter-spacing: 0.01rem;
-      color: #212121;
-      background-color: #f5f5f5;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      text-rendering: optimizeLegibility;
-    }
-
-    .navbar {
-      margin-bottom: 0
-    }
-
-    .dt {
-      width: 75%;
-      margin: 50px auto;
-    }
-
-    li.list-group-item {
-      border: none
-    }
-
-    ul.list-group {
-      border-bottom: #000 dashed 2px
-    }
-
-    .print {
-      display: none
-    }
-
-    @media print {
-      .noprint {
-        display: none
-      }
-      .print {
-        display: block;
-      }
-    }
-
-    @page {
-      size: auto;
-      margin: 10mm;
-    }
-
-    #qrcode img {
-      width: 100%;
-    }
-
-    .grid {
-      height: 91vh;
-    }
-
-    .grid {
-      width: 100%;
-      /* height: 250px; */
-    }
-
-    .grid-msg-overlay {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.4);
-    }
-
-    .grid-msg-overlay .msg {
-      opacity: 1;
-      position: absolute;
-      top: 20%;
-      left: 20%;
-      width: 60%;
-      height: 50%;
-      background-color: #eee;
-      border-radius: 4px;
-      border: 1px solid #555;
-      text-align: center;
-      font-size: 24px;
-      display: table;
-    }
-
-    .grid-msg-overlay .msg>.center {
-      display: table-cell;
-      vertical-align: middle;
-    }
-
-    .grid input[type="file"] {
-      font-size: 14px;
-      display: inline-block;
-    }
-
-    #ordersLoading {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 42%;
-    }
+    
   </style>
 
 </head>
@@ -186,6 +89,8 @@
   <!-- <script src="lib/qrscan/html5-qrcode.min.js"></script>
   <script src="lib/qrscan/jsqrcode-combined.min.js"></script> -->
   <script src="lib/qrscan/instascan.min.js"></script>
+  <script src="lib/chart/Chart.min.js"></script>
+  <script src="lib/chart/angular-chart.min.js"></script>
 
   <script src="lib/uigrid/ui-grid.core.min.js"></script>
   <script src="lib/uigrid/ui-grid.cellnav.min.js"></script>
