--- a/app-content/shopee/backend/homepage/template.html
+++ b/app-content/shopee/backend/homepage/template.html
@@ -1,15 +1,21 @@
+<style>
+    ul.ui-autocomplete{
+        display: block !important;
+        z-index: 999 !important;
+    }
+</style>
 <div class="panel panel-default panel-1688-shopee" ng-controller="logisticCtrl">
     <div class="panel-header">
         <span class="pull-right" data-toggle="collapse" data-target=".panel-body">
-            <<<
-        </span>
+            <<< </span>
     </div>
     <div class="panel-body collapse in">
+        <textarea type="text" id="typehead1" placeholder="enter a state"></textarea>
         <ul class="list-group">
             <li ng-repeat="x in data" class="list-group-item">
                 <span>{{x.size}} đơn {{x.status}}</span>
-                <span class="pull-right" >
-                    <button ng-click="update(x.status)"  type="button" class="btn btn-success">&#8634;</button>
+                <span class="pull-right">
+                    <button ng-click="update(x.status)" type="button" class="btn btn-success">&#8634;</button>
                 </span>
             </li>
         </ul>
