--- a/background/background.html
+++ b/background/background.html
@@ -9,11 +9,13 @@
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase-firestore.js"></script>
 
     <script src="/lib/jquery/jquery-2.1.3.min.js"></script>
-    <script src="/lib/angular/1.5.9/angular.min.js"></script>
+    
+    <script src="/lib/angular/1.5.9/angular.min.js"></script>    
+    <!-- <script src="/lib/bootstrap/js/ui-bootstrap-tpls-0.12.0.js"></script> -->
     <script src="/lib/custom/background/custom.js"></script>
 
     <script src="/background/background.js"></script>
-    <script src="/background/service/message-center.js"></script>
+    <script src="/background/service/helper.js"></script>
     <script src="/background/service/request-center.js"></script>
     <title>Background Page</title>
 </head>
