--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
     <div class="panel-body" ng-show="showSelect">
         <label id="status">{{status}}</label>
-        <select class="form-control" name="" id="selectStatus">
+        <select class="form-control" name="" id="selectStatus" ng-show="showOption">
             <option></option>
             <option>Đơn mới</option>
             <option>Đủ hàng</option>
