--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -1,25 +1,28 @@
 <div class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
     <div class="panel-body" ng-show="showSelect">
-        <label id="status">{{status}}</label>
-        <select class="form-control" name="" id="selectStatus" ng-show="showOption">
-            <option></option>
-            <option>Đơn mới</option>
-            <option>Đủ hàng</option>
-            <option>Thiếu hàng</option>
-            <option>Đã đóng gói</option>
-            <option>Đã gửi đi</option>
-            <option>Khách đã nhận</option>
-            <option>Đang hoàn hàng</option>
-            <option>Đã hoàn về kho</option>
-            <option>Đã thanh toán</option>
-            <option>Đã hoàn tiền</option>
-            <option>Đã hủy</option>
-        </select>
-    </div>
-    <div class="panel-body">
-        <a href={{printLink}} target="_blank">
-            <button class="btn btn-success" id="print">THEO DÕI</button>
-        </a>
-    </div>
+        <div class="form-group-status noprint">
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="NEW">ĐƠN MỚI
+            </div>
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="PACKED">ĐÃ ĐÓNG GÓI
+            </div>
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="SHIPPED">ĐÃ GỬI ĐI
+            </div>
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="DELIVERED">KHÁCH ĐÃ NHẬN
+            </div>
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="RETURNED">ĐÃ HOÀN HÀNG
+            </div>
+            </select>
 
-</div>
+        </div>
+        <div class="panel-body">
+            <a href={{printLink}} target="_blank">
+                <button class="btn btn-success" id="print">THEO DÕI</button>
+            </a>
+        </div>
+
+    </div>
