--- a/options.html
+++ b/options.html
@@ -52,6 +52,9 @@
           <li ng-class="{active:isActive('/scan-order')}">
             <a href="#scan-order">Quét Đơn</a>
           </li>
+          <li ng-class="{active:isActive('/products')}">
+            <a href="#products">Sản phẩm</a>
+          </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -131,6 +134,7 @@
   <script src="app-options-page\components\export-detail\exportController.js"></script>
   <script src="app-options-page\components\import-detail\importController.js"></script>
   <script src="app-options-page\components\imports\importsController.js"></script>
+  <script src="app-options-page\components\products\productsController.js"></script>
   <script src="app-options-page/services/chromeStorage.js"></script>
   <script src="lib/noty/js/noty.min.js"></script>
   <script src='lib/qrcode.min.js'></script>
