--- a/options.html
+++ b/options.html
@@ -73,7 +73,7 @@
 
 
           <li>
-            <a href="#">About</a>
+            <a href="https://chrome.google.com/webstore/detail/l%C3%A2%CC%A3p-nghi%C3%AA%CC%A3p-shop-online/anokolenakmakmibdegfndgjfboiigfa" target="_blank">About</a>
           </li>
 
         </ul>
