--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -16,6 +16,9 @@
             <div class="form-check">
                 <input type="radio" ng-model="statusRadio" value="RETURNED">ĐÃ HOÀN HÀNG
             </div>
+            <div class="form-check">
+                    <input type="radio" ng-model="statusRadio" value="CANCELED">ĐÃ HỦY
+                </div>
             </select>
 
         </div>
