--- a/app-content/shopee/backend/list-page/template.html
+++ b/app-content/shopee/backend/list-page/template.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default panel-1688-shopee" ng-controller="list-shopee-saleCtrl">
-    <div class="panel-body">
+    <!-- <div class="panel-body">
         <button class="btn btn-success" ng-disabled="notExist.length == 0" id="open">{{notExist.length}} Đơn Cần Theo Dõi</button>
-    </div>
+    </div> -->
 </div>
