--- a/options.html
+++ b/options.html
@@ -101,6 +101,7 @@
   <!-- <script src="lib/qrscan/html5-qrcode.min.js"></script>
   <script src="lib/qrscan/jsqrcode-combined.min.js"></script> -->
   <script src="lib/qrscan/instascan.min.js"></script>
+  <script src="lib/html2canvas.js"></script>
   <script src="lib/chart/Chart.min.js"></script>
   <script src="lib/chart/angular-chart.min.js"></script>
 
