--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -1,5 +1,9 @@
 <div class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
-    <div class="panel-body">
+    <div class="panel-header">
+        <span class="pull-right" data-toggle="collapse" data-target=".panel-body">
+            < </span>
+    </div>
+    <div class="panel-body collapse in">
         <div class="form-group-status noprint" ng-show="showSelect">
             <div class="form-check">
                 <input type="radio" ng-model="statusRadio" value="NEW">ĐƠN MỚI
@@ -13,9 +17,12 @@
             <div class="form-check">
                 <input type="radio" ng-model="statusRadio" value="DELIVERED">KHÁCH ĐÃ NHẬN
             </div>
-            <div class="form-check">
+            <!-- <div class="form-check">
                 <input type="radio" ng-model="statusRadio" value="PAID">ĐÃ THANH TOÁN
             </div>
+            <div class="form-check">
+                <input type="radio" ng-model="statusRadio" value="RETURNING">ĐANG HOÀN HÀNG
+            </div> -->
             <div class="form-check">
                 <input type="radio" ng-model="statusRadio" value="RETURNED">ĐÃ HOÀN HÀNG
             </div>
