--- a/options.html
+++ b/options.html
@@ -55,7 +55,10 @@
           <a href="#scan-order">Quét QR</a>
         </li>
         <li ng-class="{active:isActive('/products')}">
-          <a href="#products">Sản phẩm</a>
+          <a href="#products">Sản Phẩm</a>
+        </li>
+        <li ng-class="{active:isActive('/invoice')}">
+          <a href="#invoice">Đơn Nhập</a>
         </li>
       </ul>
 
@@ -112,10 +115,11 @@
   <script src="lib/uigrid/ui-grid.resize-columns.min.js"></script>
   <script src="lib/uigrid/ui-grid.edit.min.js"></script>
   <script src="lib/uigrid/ui-grid.importer.min.js"></script>
+  <script src="lib/uigrid/csv.js"></script>
+  <script src="lib/uigrid/lodash.min.js"></script>
   <script src="lib/xlsx.full.min.js"></script>
   <script src="lib/ods.js"></script>
   <script src="lib/uigrid/ui-grid.min.js"></script>
-
   <!-- <script src="lib/datatable/dataTable.min.js"></script> -->
   <script src="lib/bootstrap/js/ui-bootstrap-tpls-2.5.0.js"></script>
   <script src="lib/angular/1.5.9/angular-route.min.js"></script>
@@ -140,6 +144,7 @@
   <script src="app-options-page\components\imports\importsController.js"></script>
   <script src="app-options-page\components\products\productsController.js"></script>
   <script src="app-options-page\components\productsList\productsListCtrl.js"></script>
+  <script src="app-options-page\components\invoice\invoiceController.js"></script>
   <script src="app-options-page/services/chromeStorage.js"></script>
   <script src="lib/noty/js/noty.min.js"></script>
   <script src='lib/qrcode.min.js'></script>
