--- a/options.html
+++ b/options.html
@@ -128,6 +128,7 @@
   <script src="lib/uigrid/ui-grid.selection.min.js"></script>
   <script src="lib/uigrid/ui-grid.pagination.min.js"></script>
   <script src="lib/uigrid/ui-grid.resize-columns.min.js"></script>
+  <script src="lib/uigrid/ui-grid.auto-resize.min.js"></script>
   <script src="lib/uigrid/ui-grid.edit.min.js"></script>
   <script src="lib/uigrid/ui-grid.importer.min.js"></script>
   <script src="lib/uigrid/csv.js"></script>
