--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -11,7 +11,7 @@
             padding: 5px;
             background: #ff5722;
             color: #fff;
-            font-weight: bold;">
+            font-weight: bold;" ng-show="note !== ''">
                 "{{note}}"
             </div>
             <a href="{{exLink}}" target="_blank" class="exId" title="Mã Phiếu Xuất" style="padding: 5px;
