--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
+<div ng-show="okey" class="panel panel-default panel-1688-shopee" ng-controller="item-shopee-saleCtrl" id="addTaskModal">
     <div class="panel-header">
         <span class="pull-right" data-toggle="collapse" data-target=".panel-body">
             < </span>
