--- a/options.html
+++ b/options.html
@@ -132,7 +132,10 @@
   <script src="lib/uigrid/ui-grid.edit.min.js"></script>
   <script src="lib/uigrid/ui-grid.importer.min.js"></script>
   <script src="lib/uigrid/csv.js"></script>
+
   <script src="lib/uigrid/lodash.min.js"></script>
+  <script src="lib/jszip/jszip.min.js"></script>
+  <script src="lib/excel-builder.dist.js"></script>
   <script src="lib/xlsx.full.min.js"></script>
   <script src="lib/ods.js"></script>
   <script src="lib/uigrid/ui-grid.min.js"></script>
