--- a/options.html
+++ b/options.html
@@ -53,12 +53,12 @@
             <li ng-class="{active:isActive('/scan-order')}">
               <a href="#scan-order"><span class="glyphicon glyphicon-qrcode"></span> Quét QR</a>
             </li>      
+            <li ng-class="{active:isActive('/completed-orders')}">
+              <a href="#completed-orders"><span class="glyphicon glyphicon-th-list"></span> Đơn Hoàn Thành</a>
+            </li>  
             <li ng-class="{active:isActive('/payment')}">
               <a href="#payment"><span class="glyphicon glyphicon-usd"></span> Đối Soát</a>
             </li>           
-            <li ng-class="{active:isActive('/completed-orders')}">
-              <a href="#completed-orders"><span class="glyphicon glyphicon-usd"></span> Đơn Hoàn Thành</a>
-            </li>  
             <li ng-class="{active:isActive('/configuration')}">
               <a href="#configuration"><span class="glyphicon glyphicon-cog"></span> Cài Đặt</a>
             </li>
