--- a/options.html
+++ b/options.html
@@ -54,7 +54,7 @@
               <a href="#scan-order"><span class="glyphicon glyphicon-qrcode"></span> Quét QR</a>
             </li>      
             <li ng-class="{active:isActive('/completed-orders')}">
-              <a href="#completed-orders"><span class="glyphicon glyphicon-th-list"></span> Đơn Hoàn Thành</a>
+              <a href="#completed-orders"><span class="glyphicon glyphicon-th-list"></span> Đơn Nợ</a>
             </li>  
             <li ng-class="{active:isActive('/payment')}">
               <a href="#payment"><span class="glyphicon glyphicon-usd"></span> Đối Soát</a>
