--- a/options.html
+++ b/options.html
@@ -24,7 +24,7 @@
 
 <body ng-app="app">
   <div ng-controller="header-controller" class="row">
-    <div id="rightDiv" class="col-sm-3 col-lg-2 collapse in" style="padding-right:0">
+    <div id="rightDiv" class="col-sm-3 col-lg-2 collapse in" style="padding-right:0;width: 12.66666667%;">
       <nav class="navbar navbar-inverse navbar-fixed-side">
         
         <div>
@@ -68,7 +68,7 @@
         
       </nav>
     </div>
-    <div id="leftDiv" class="col-sm-9 col-lg-10" style="padding-left:0; padding-right: 0px;">
+    <div id="leftDiv" class="col-sm-9 col-lg-10" style="padding-left:0; padding-right: 0px;width: 86.33333333%;">
       <nav class="navbar navbar-default right">
           <ul class="nav navbar-nav navbar-left" style="margin-right: 10px">
               <li>
@@ -166,6 +166,7 @@
   <script src="app-options-page/services/chromeStorage.js"></script>
   <script src="lib/noty/js/noty.min.js"></script>
   <script src='lib/qrcode.min.js'></script>
+  <script src="lib/JsBarcode.all.min.js"></script>
 </body>
 
 </html>
