--- a/app-content/shopee/backend/single-sale/template.html
+++ b/app-content/shopee/backend/single-sale/template.html
@@ -14,6 +14,10 @@
             font-weight: bold;" ng-show="note !== ''">
                 "{{note}}"
             </div>
+            <a href="#" target="_blank" class="exId" title="Mã Phiếu Xuất" style="padding: 5px;
+            background: #00bf33;
+            color: #fff;">{{traceno}}</a>
+            <br>
             <a href="{{exLink}}" target="_blank" class="exId" title="Mã Phiếu Xuất" style="padding: 5px;
             background: #00bf33;
             color: #fff;">{{exId}}</a>
